knownnodesのlastseedがどれくらい前なのか気になった
knownnodesに登録されてから一度も接続できなくて消されたやつも頻繁に再登録されてるだろこれ！